// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col Md renders col-md-6 1`] = `
.c0 {
  min-height: 1px;
  min-width: 0;
}

@media (min-width: 768px) {
  .c0 {
    flex: 0 0 auto;
    width: 50%;
  }
}

<div
  class="c0"
  data-class="col-md-6"
  data-grid="col"
>
  col
</div>
`;

exports[`Col Md renders col-md-auto 1`] = `
.c0 {
  min-height: 1px;
  min-width: 0;
}

@media (min-width: 768px) {
  .c0 {
    flex: 0 0 auto;
    width: auto;
  }
}

<div
  class="c0"
  data-class="col-md-auto"
  data-grid="col"
>
  col
</div>
`;

exports[`Col Md renders col-md-true 1`] = `
.c0 {
  min-height: 1px;
  min-width: 0;
}

@media (min-width: 768px) {
  .c0 {
    flex: 1 0 0;
  }
}

<div
  class="c0"
  data-class="col-md-true"
  data-grid="col"
>
  col
</div>
`;
